--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 amazon.dynamodb.endpoint=https://dynamodb.us-east-1.amazonaws.com
 amazon.aws.accesskey=AKIAZAWPGTEIUKETLS7A
 amazon.aws.secretkey=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
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
